  05 Feb 2014; Alon Bar-Lev <alonbl@redhat.com>
  files/jasperreports-server-bin-5.5.0-ANT_OPTS.patch,
  files/jasperreports-server-bin-5.5.0-java.io.tmpdir.patch:
  sync patch levels

  05 Feb 2014; Alon Bar-Lev <alonbl@redhat.com>
  +files/jasperreports-server-bin-5.5.0-ANT_OPTS.patch,
  +files/jasperreports-server-bin-5.5.0-java.io.tmpdir.patch,
  jasperreports-server-bin-5.5.0.ebuild:
  Fix /tmp issues

  26 Jan 2014; Alon Bar-Lev <alonbl@redhat.com>
  +files/jasperreports-server-bin-5.5.0-write-own.patch,
  jasperreports-server-bin-5.5.0.ebuild:
  do not write own files, prereq is using postgres only for now

  26 Jan 2014; Alon Bar-Lev <alonbl@redhat.com>
  jasperreports-server-bin-5.5.0.ebuild:
  preserve filemod

  26 Jan 2014; Alon Bar-Lev <alonbl@redhat.com>
  jasperreports-server-bin-5.5.0.ebuild:
  remove bin suffix from target

*jasperreports-server-bin-5.5.0 (26 Jan 2014)

  26 Jan 2014; Alon Bar-Lev <alonbl@redhat.com>
  +files/jasperreports-server-bin-5.5.0-additional-config.patch,
  +files/jasperreports-server-bin-5.5.0-install_resources.patch,
  +jasperreports-server-bin-5.5.0.ebuild, +metadata.xml:
  initial import