@@ -1,3 +1,7 @@
+  10 Feb 2014; Alon Bar-Lev <alonbl@redhat.com>
+  jasperreports-server-bin-5.5.0.ebuild:
+  set proper permissions
+
   05 Feb 2014; Alon Bar-Lev <alonbl@redhat.com>
   files/jasperreports-server-bin-5.5.0-ANT_OPTS.patch,
   files/jasperreports-server-bin-5.5.0-java.io.tmpdir.patch:
